--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@ layout: home
 search_exclude: true
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+Hello and welcome to the my blog page. I have dabbled with blogging with other platforms but happen to like fastpages the most so far.
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
-
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
-
-You can edit the `index.html` file to change this content.
+I will be writing some blogs myself or will share link to relevant/interesting blogs.
 
 # Posts
