deploy: e369f4313d5efaa09021c431c10d360b27eb0c51

--- a/index.html
+++ b/index.html
@@ -78,13 +78,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><p>Hello and welcome to the my blog page. I have dabbled with blogging with other platforms but happen to like fastpages the most so far.</p>
 
-<p><img src="/blogs/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
-
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="highlighter-rouge">index.html</code> file to change this content.</p>
+<p>I will be writing some blogs myself or will share link to relevant/interesting blogs.</p>
 
 <h1 id="posts">Posts</h1>
 
