--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://vsgurung.github.io/blogs/about/" />
 <meta property="og:site_name" content="Collection of Blogs" />
 <script type="application/ld+json">
-{"description":"An easy to use blogging platform with support for Jupyter Notebooks.","headline":"About Me","@type":"WebSite","url":"https://vsgurung.github.io/blogs/about/","name":"Collection of Blogs","@context":"https://schema.org"}</script>
+{"description":"An easy to use blogging platform with support for Jupyter Notebooks.","@type":"WebSite","headline":"About Me","url":"https://vsgurung.github.io/blogs/about/","name":"Collection of Blogs","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blogs/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://vsgurung.github.io/blogs/feed.xml" title="Collection of Blogs" /><link rel="shortcut icon" type="image/x-icon" href="/blogs/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>About Me | Collection of Blogs</title>
@@ -26,7 +26,7 @@
 <meta property="og:url" content="https://vsgurung.github.io/blogs/about/" />
 <meta property="og:site_name" content="Collection of Blogs" />
 <script type="application/ld+json">
-{"description":"An easy to use blogging platform with support for Jupyter Notebooks.","headline":"About Me","@type":"WebSite","url":"https://vsgurung.github.io/blogs/about/","name":"Collection of Blogs","@context":"https://schema.org"}</script>
+{"description":"An easy to use blogging platform with support for Jupyter Notebooks.","@type":"WebSite","headline":"About Me","url":"https://vsgurung.github.io/blogs/about/","name":"Collection of Blogs","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
